# Hybrid_JSBACH_Example

./: .gitmodules  Params_example.ipynb  README.md
Py-JSB_mini_bridge/: LICENSE  README.md
Py-JSB_mini_bridge/CPP_part/: Makefile.am  configure.ac  hyb_reda_cdrag.cpp  hyb_reda_cdrag.h  hyb_reda_ci.cpp  hyb_reda_ci.h  hyb_reda_gs.cpp  hyb_reda_gs.h  hyb_reda_jmax.cpp  hyb_reda_jmax.h  hyb_reda_vcmax.cpp  hyb_reda_vcmax.h  use_hyb_reda.cpp  use_hyb_reda.h  util.cpp  util.h
Py-JSB_mini_bridge/Pytorch_part/: model_hyb_cdrag.pt  model_hyb_ci.pt  model_hyb_gs.pt  model_hyb_jmax.pt  model_hyb_vcmax.pt
